devise omniauth with facebook and favorites

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 SPTRANS_TOKEN= #### Token #####
 TOKEN_CONS= #### Token #####
+FACEBOOK_APP_ID= #### Token ####
+FACEBOOK_APP_SECRET= #### Token ####
